--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,9 +27,8 @@ jobs:
     - run:
         name: Upload LambdaFunction to S3
         command: |
-          aws s3 cp index.zip s3://${AWS_CODE_DEPLOY_BUCKET}/index.zip
-
-    - run:
-        name: Update lambdaFunction code
-        command: |
-          aws lambda update-function-code --function-name my-Function --region us-east-1 --zip-file file://index.zip
+          aws s3 cp index.zip s3://${AWS_CODE_DEPLOY_BUCKET}
+#    - run:
+#        name: Update lambdaFunction code
+#        command: |
+#          aws lambda update-function-code --function-name my-Function --region us-east-1 --zip-file file://index.zip
