--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
         command: |
           aws s3 cp index.zip s3://${AWS_CODE_DEPLOY_BUCKET}
 
-#    - run:
-#        name: Update lambdaFunction code
-#        command: |
-#          aws lambda update-function-code --function-name my-Function --region us-east-1 --zip-file file://index.zip
+    - run:
+        name: Update lambdaFunction code
+        command: |
+          aws lambda update-function-code --function-name csye6225 --region us-east-1 --zip-file file://index.zip
